Ports the helpful span wholesale

--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -624,6 +624,10 @@ blockquote.nicegreen {
   border-color: #059223;
 }
 
+.helpful {
+  color: #368f31;
+}
+
 /* hornichems */
 .userlove {
   color: #ff42a6;
