--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -665,6 +665,10 @@ blockquote.nicegreen {
   border-color: #14a833;
 }
 
+.helpful {
+  color: #368f31;
+}
+
 .userlove {
   color: #FF1493;
   font-style: italic;
