--- a/tgui/packages/tgui/styles/components/Section.scss
+++ b/tgui/packages/tgui/styles/components/Section.scss
@@ -30,6 +30,11 @@
    border-bottom: base.em(2px) solid $separator-color;
  }
 
+ .Section__titleHolder {
+  position: relative;
+  padding: 0.5em;
+ }
+
  .Section__titleText {
    font-size: base.em(14px);
    font-weight: bold;
@@ -40,7 +45,6 @@
    position: absolute;
    display: inline-block;
    right: 0.5em;
-   margin-top: base.em(-1px);
  }
 
  .Section__rest {
